--- a/config
+++ b/config
@@ -1,12 +1,19 @@
 ngx_addon_name=appguard_nginx_module
 
+NGX_APPGUARD_SRCS="$ngx_addon_dir/appguard_nginx_module.c"
+NGX_APPGUARD_DEPS="$ngx_addon_dir/appguard_nginx_module.h"
+
 if test -n "$ngx_module_link"; then
     ngx_module_type=HTTP
-    ngx_module_name=appguard_nginx_module
-    ngx_module_srcs="$ngx_addon_dir/appguard_nginx_module.c"
+    ngx_module_name=$ngx_addon_name
+    ngx_module_incs=
+    ngx_module_deps="$NGX_APPGUARD_DEPS"
+    ngx_module_srcs="$NGX_APPGUARD_SRCS"
+    ngx_module_libs=
 
     . auto/module
 else
-    HTTP_MODULES="$HTTP_MODULES appguard_nginx_module"
-    NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/appguard_nginx_module.c"
+    HTTP_AUX_FILTER_MODULES="$HTTP_MODULES $ngx_addon_name"
+    NGX_ADDON_SRCS="$NGX_APPGUARD_SRCS"
+    NGX_ADDON_DEPS="$NGX_APPGUARD_DEPS"
 fi
