--- a/config
+++ b/config
@@ -1,19 +1,62 @@
 ngx_addon_name=appguard_nginx_module
 
-NGX_APPGUARD_SRCS="$ngx_addon_dir/appguard_nginx_module.c"
-NGX_APPGUARD_DEPS="$ngx_addon_dir/appguard_nginx_module.h"
+NGX_APPGUARD_SRCS="                                 \
+    $ngx_addon_dir/src/appguard_nginx_module.c      \
+    "
+NGX_APPGUARD_DEPS="                                 \
+    $ngx_addon_dir/src/appguard_nginx_module.h      \
+    "
+
+APPGUARD_PROTO_SRCS="                               \
+    $ngx_addon_dir/proto/appguard.pb.c              \
+    "
+APPGUARD_PROTO_DEPS="                               \
+    $ngx_addon_dir/proto/appguard.pb.h              \
+    "
+
+NANOPB_SRCS="                                       \
+    $ngx_addon_dir/vendor/nanopb/pb_decode.c        \
+    $ngx_addon_dir/vendor/nanopb/pb_encode.c        \
+    $ngx_addon_dir/vendor/nanopb/pb_common.c        \
+    "
+
+NANOPB_DEPS="                                       \
+    $ngx_addon_dir/vendor/nanopb/pb_decode.h        \
+    $ngx_addon_dir/vendor/nanopb/pb_encode.h        \
+    $ngx_addon_dir/vendor/nanopb/pb_common.h        \
+    $ngx_addon_dir/vendor/nanopb/pb.h               \
+    "
 
 if test -n "$ngx_module_link"; then
     ngx_module_type=HTTP
     ngx_module_name=$ngx_addon_name
-    ngx_module_incs=
-    ngx_module_deps="$NGX_APPGUARD_DEPS"
-    ngx_module_srcs="$NGX_APPGUARD_SRCS"
-    ngx_module_libs=
+    ngx_module_incs="                               \
+        $ngx_module_incs                            \
+        $ngx_addon_dir/vendor/nanopb                \
+        $ngx_addon_dir/proto                        \
+    "
+    ngx_module_deps="                               \
+        $NANOPB_DEPS                                \
+        $APPGUARD_PROTO_DEPS                        \
+        $NGX_APPGUARD_DEPS                          \
+    "
+    ngx_module_srcs="                               \
+        $NANOPB_SRCS                                \
+        $APPGUARD_PROTO_SRCS                        \
+        $NGX_APPGUARD_SRCS                          \
+    "
 
     . auto/module
 else
-    HTTP_AUX_FILTER_MODULES="$HTTP_MODULES $ngx_addon_name"
-    NGX_ADDON_SRCS="$NGX_APPGUARD_SRCS"
-    NGX_ADDON_DEPS="$NGX_APPGUARD_DEPS"
+    HTTP_MODULES="$HTTP_MODULES $ngx_addon_name"
+    NGX_ADDON_SRCS="                               \
+        $NANOPB_SRCS                               \
+        $APPGUARD_PROTO_SRCS                       \
+        $NGX_APPGUARD_SRCS                         \
+    "
+    NGX_ADDON_DEPS="                               \
+        $NANOPB_DEPS                               \
+        $APPGUARD_PROTO_DEPS                       \
+        $NGX_APPGUARD_DEPS                         \
+    "
 fi
