--- a/config
+++ b/config
@@ -7,6 +7,7 @@ NGX_APPGUARD_SRCS="                                    \
     $ngx_addon_dir/src/appguard.wrapper.cpp            \
     $ngx_addon_dir/src/appguard.stream.cpp             \
     $ngx_addon_dir/src/appguard.uclient.info.cpp       \
+    $ngx_addon_dir/src/appguard.uclient.exception.cpp  \
     $ngx_addon_dir/src/appguard.nginx.module.cpp       \
     "
 NGX_APPGUARD_DEPS="                                    \
@@ -17,7 +18,7 @@ NGX_APPGUARD_DEPS="                                    \
     $ngx_addon_dir/src/appguard.pb.h                   \
     $ngx_addon_dir/src/appguard.stream.hpp             \
     $ngx_addon_dir/src/appguard.uclient.info.hpp       \
-    $ngx_addon_dir/src/appguard.client.exception.hpp   \
+    $ngx_addon_dir/src/appguard.uclient.exception.hpp  \
     "
 
 CORE_LINK="$CORE_LINK -lgrpc++ -lgrpc -lprotobuf       \
