--- a/config
+++ b/config
@@ -6,6 +6,7 @@ NGX_APPGUARD_SRCS="                                    \
     $ngx_addon_dir/src/appguard.inner.utils.cpp        \
     $ngx_addon_dir/src/appguard.wrapper.cpp            \
     $ngx_addon_dir/src/appguard.stream.cpp             \
+    $ngx_addon_dir/src/appguard.tcp.ucache.cpp         \
     $ngx_addon_dir/src/appguard.uclient.info.cpp       \
     $ngx_addon_dir/src/appguard.uclient.exception.cpp  \
     $ngx_addon_dir/src/appguard.nginx.module.cpp       \
@@ -17,6 +18,7 @@ NGX_APPGUARD_DEPS="                                    \
     $ngx_addon_dir/src/appguard.grpc.pb.h              \
     $ngx_addon_dir/src/appguard.pb.h                   \
     $ngx_addon_dir/src/appguard.stream.hpp             \
+    $ngx_addon_dir/src/appguard.tcp.ucache.hpp         \
     $ngx_addon_dir/src/appguard.uclient.info.hpp       \
     $ngx_addon_dir/src/appguard.uclient.exception.hpp  \
     "
