--- a/config
+++ b/config
@@ -1,25 +1,31 @@
 ngx_addon_name=appguard_nginx_module
 
 NGX_APPGUARD_SRCS="                                    \
-    $ngx_addon_dir/src/appguard.pb.cc                  \
-    $ngx_addon_dir/src/appguard.grpc.pb.cc             \
+    $ngx_addon_dir/src/generated/appguard.pb.cc        \
+    $ngx_addon_dir/src/generated/appguard.grpc.pb.cc   \
+    $ngx_addon_dir/src/generated/commands.pb.cc        \
+    $ngx_addon_dir/src/generated/commands.grpc.pb.cc   \
     $ngx_addon_dir/src/appguard.inner.utils.cpp        \
     $ngx_addon_dir/src/appguard.wrapper.cpp            \
     $ngx_addon_dir/src/appguard.stream.cpp             \
     $ngx_addon_dir/src/appguard.tcp.ucache.cpp         \
     $ngx_addon_dir/src/appguard.uclient.info.cpp       \
     $ngx_addon_dir/src/appguard.uclient.exception.cpp  \
+    $ngx_addon_dir/src/appguard.storage.cpp            \
     $ngx_addon_dir/src/appguard.nginx.module.cpp       \
     "
 NGX_APPGUARD_DEPS="                                    \
+    $ngx_addon_dir/src/generated/appguard.pb.h         \
+    $ngx_addon_dir/src/generated/appguard.grpc.pb.h    \
+    $ngx_addon_dir/src/generated/commands.pb.h         \
+    $ngx_addon_dir/src/generated/commands.grpc.pb.h    \
     $ngx_addon_dir/src/appguard.nginx.module.hpp       \
     $ngx_addon_dir/src/appguard.wrapper.hpp            \
     $ngx_addon_dir/src/appguard.inner.utils.hpp        \
-    $ngx_addon_dir/src/appguard.grpc.pb.h              \
-    $ngx_addon_dir/src/appguard.pb.h                   \
     $ngx_addon_dir/src/appguard.stream.hpp             \
     $ngx_addon_dir/src/appguard.tcp.ucache.hpp         \
     $ngx_addon_dir/src/appguard.uclient.info.hpp       \
+    $ngx_addon_dir/src/appguard.storage.hpp            \
     $ngx_addon_dir/src/appguard.uclient.exception.hpp  \
     "
 
