Added missing dependencies to build & readme

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
           libssl-dev \
           libgrpc++-dev \
           libprotobuf-dev \
+          libabsl-dev \
+          libre2-dev \
+          libupb-dev \
           protobuf-compiler-grpc
 
     - name: Download NGINX source
